--- a/init.x86.rc
+++ b/init.x86.rc
@@ -23,13 +23,14 @@ on early-init && property:mesa.galliumhud.value=*
 on early-init && property:mesa.galliumhud.period=*
     export GALLIUM_HUD_PERIOD ${mesa.galliumhud.period}
 
-    write /sys/block/zram0/comp_algorithm zstd
-
-on init
-    write /proc/sys/vm/page-cluster 0
-
 on fs
     mount_all /fstab.${ro.hardware}
+
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 100
+    write /sys/kernel/mm/swap/vma_ra_enabled false
+
     swapon_all /fstab.${ro.hardware}
 
 on post-fs
@@ -60,6 +61,8 @@ on post-fs-data
     mkdir /data/vendor/thermal-daemon 0660 system system
 
 on boot
+    write /proc/sys/vm/dirty_writeback_centisecs 300
+
     setprop ro.radio.use-ppp yes
     setprop status.battery.state Slow
     setprop status.battery.level 5
